--- a/blog/.env
+++ b/blog/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=df9a6e37c57dc3220ca4791c97943695
+DATABASE_URL=postgresql://ubuntu:ubuntu@localhost:5432/Basa
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
